languages/mapl/grammar/generated-test/MAPLParser.js
// Generated from C:/dev/pulse-new-repo/virtualMachines/esp32/aggregator/grammar/MAPL.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import MAPLVisitor from './MAPLVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class MAPLParser extends antlr4.Parser {

    static grammarFileName = "MAPL.g4";
    static literalNames = [ null, "'map'", "'from'", "'to'", "';'", "'end'", 
                            "'.'", "':='", "'default'", "'('", "')'", "'if'", 
                            "'then'", "'else'", "'for'", "'each'", "'as'", 
                            "'validate'", "','", "'or'", "'and'", "'='", 
                            "'<>'", "'<'", "'<='", "'>'", "'>='", "'+'", 
                            "'-'", "'*'", "'/'", "'mod'", "'not'", "'true'", 
                            "'false'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, "IDENT", "NUMBER", "STRING", 
                             "LINE_COMMENT", "BLOCK_COMMENT", "WS" ];
    static ruleNames = [ "mapUnit", "mapDecl", "mapBody", "mapStmt", "fieldPath", 
                         "assignStmt", "assignDefaultStmt", "functionAssignStmt", 
                         "functionCall", "ifStmt", "forStmt", "validateStmt", 
                         "exprList", "expr", "logicalOrExpr", "logicalAndExpr", 
                         "equalityExpr", "relationalExpr", "additiveExpr", 
                         "multiplicativeExpr", "unaryExpr", "primaryExpr" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = MAPLParser.ruleNames;
        this.literalNames = MAPLParser.literalNames;
        this.symbolicNames = MAPLParser.symbolicNames;
    }



	mapUnit() {
	    let localctx = new MapUnitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, MAPLParser.RULE_mapUnit);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 47;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===1) {
	            this.state = 44;
	            this.mapDecl();
	            this.state = 49;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 50;
	        this.match(MAPLParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	mapDecl() {
	    let localctx = new MapDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, MAPLParser.RULE_mapDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 52;
	        this.match(MAPLParser.T__0);
	        this.state = 53;
	        this.match(MAPLParser.IDENT);
	        this.state = 54;
	        this.match(MAPLParser.T__1);
	        this.state = 55;
	        this.match(MAPLParser.IDENT);
	        this.state = 56;
	        this.match(MAPLParser.T__2);
	        this.state = 57;
	        this.match(MAPLParser.IDENT);
	        this.state = 58;
	        this.match(MAPLParser.T__3);
	        this.state = 59;
	        this.mapBody();
	        this.state = 60;
	        this.match(MAPLParser.T__4);
	        this.state = 61;
	        this.match(MAPLParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	mapBody() {
	    let localctx = new MapBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, MAPLParser.RULE_mapBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 66;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 11)) & ~0x1f) === 0 && ((1 << (_la - 11)) & 16777289) !== 0)) {
	            this.state = 63;
	            this.mapStmt();
	            this.state = 68;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	mapStmt() {
	    let localctx = new MapStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, MAPLParser.RULE_mapStmt);
	    try {
	        this.state = 75;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 69;
	            this.assignStmt();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 70;
	            this.assignDefaultStmt();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 71;
	            this.functionAssignStmt();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 72;
	            this.ifStmt();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 73;
	            this.forStmt();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 74;
	            this.validateStmt();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fieldPath() {
	    let localctx = new FieldPathContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, MAPLParser.RULE_fieldPath);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 77;
	        this.match(MAPLParser.IDENT);
	        this.state = 82;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===6) {
	            this.state = 78;
	            this.match(MAPLParser.T__5);
	            this.state = 79;
	            this.match(MAPLParser.IDENT);
	            this.state = 84;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignStmt() {
	    let localctx = new AssignStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, MAPLParser.RULE_assignStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 85;
	        this.fieldPath();
	        this.state = 86;
	        this.match(MAPLParser.T__6);
	        this.state = 87;
	        this.fieldPath();
	        this.state = 88;
	        this.match(MAPLParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignDefaultStmt() {
	    let localctx = new AssignDefaultStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, MAPLParser.RULE_assignDefaultStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 90;
	        this.fieldPath();
	        this.state = 91;
	        this.match(MAPLParser.T__6);
	        this.state = 92;
	        this.fieldPath();
	        this.state = 93;
	        this.match(MAPLParser.T__7);
	        this.state = 94;
	        this.expr();
	        this.state = 95;
	        this.match(MAPLParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionAssignStmt() {
	    let localctx = new FunctionAssignStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, MAPLParser.RULE_functionAssignStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 97;
	        this.fieldPath();
	        this.state = 98;
	        this.match(MAPLParser.T__6);
	        this.state = 99;
	        this.functionCall();
	        this.state = 100;
	        this.match(MAPLParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionCall() {
	    let localctx = new FunctionCallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, MAPLParser.RULE_functionCall);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 102;
	        this.match(MAPLParser.IDENT);
	        this.state = 103;
	        this.match(MAPLParser.T__8);
	        this.state = 105;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 9)) & ~0x1f) === 0 && ((1 << (_la - 9)) & 529006593) !== 0)) {
	            this.state = 104;
	            this.exprList();
	        }

	        this.state = 107;
	        this.match(MAPLParser.T__9);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifStmt() {
	    let localctx = new IfStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, MAPLParser.RULE_ifStmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 109;
	        this.match(MAPLParser.T__10);
	        this.state = 110;
	        this.expr();
	        this.state = 111;
	        this.match(MAPLParser.T__11);
	        this.state = 112;
	        this.mapBody();
	        this.state = 115;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===13) {
	            this.state = 113;
	            this.match(MAPLParser.T__12);
	            this.state = 114;
	            this.mapBody();
	        }

	        this.state = 117;
	        this.match(MAPLParser.T__4);
	        this.state = 118;
	        this.match(MAPLParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	forStmt() {
	    let localctx = new ForStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, MAPLParser.RULE_forStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 120;
	        this.match(MAPLParser.T__13);
	        this.state = 121;
	        this.match(MAPLParser.T__14);
	        this.state = 122;
	        this.fieldPath();
	        this.state = 123;
	        this.match(MAPLParser.T__15);
	        this.state = 124;
	        this.match(MAPLParser.IDENT);
	        this.state = 125;
	        this.mapBody();
	        this.state = 126;
	        this.match(MAPLParser.T__4);
	        this.state = 127;
	        this.match(MAPLParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	validateStmt() {
	    let localctx = new ValidateStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, MAPLParser.RULE_validateStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 129;
	        this.match(MAPLParser.T__16);
	        this.state = 130;
	        this.expr();
	        this.state = 131;
	        this.match(MAPLParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	exprList() {
	    let localctx = new ExprListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, MAPLParser.RULE_exprList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 133;
	        this.expr();
	        this.state = 138;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===18) {
	            this.state = 134;
	            this.match(MAPLParser.T__17);
	            this.state = 135;
	            this.expr();
	            this.state = 140;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expr() {
	    let localctx = new ExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, MAPLParser.RULE_expr);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 141;
	        this.logicalOrExpr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	logicalOrExpr() {
	    let localctx = new LogicalOrExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, MAPLParser.RULE_logicalOrExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 143;
	        this.logicalAndExpr();
	        this.state = 148;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===19) {
	            this.state = 144;
	            this.match(MAPLParser.T__18);
	            this.state = 145;
	            this.logicalAndExpr();
	            this.state = 150;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	logicalAndExpr() {
	    let localctx = new LogicalAndExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, MAPLParser.RULE_logicalAndExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 151;
	        this.equalityExpr();
	        this.state = 156;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===20) {
	            this.state = 152;
	            this.match(MAPLParser.T__19);
	            this.state = 153;
	            this.equalityExpr();
	            this.state = 158;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	equalityExpr() {
	    let localctx = new EqualityExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, MAPLParser.RULE_equalityExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 159;
	        this.relationalExpr();
	        this.state = 164;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===21 || _la===22) {
	            this.state = 160;
	            _la = this._input.LA(1);
	            if(!(_la===21 || _la===22)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 161;
	            this.relationalExpr();
	            this.state = 166;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	relationalExpr() {
	    let localctx = new RelationalExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, MAPLParser.RULE_relationalExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 167;
	        this.additiveExpr();
	        this.state = 172;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 125829120) !== 0)) {
	            this.state = 168;
	            _la = this._input.LA(1);
	            if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 125829120) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 169;
	            this.additiveExpr();
	            this.state = 174;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	additiveExpr() {
	    let localctx = new AdditiveExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, MAPLParser.RULE_additiveExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 175;
	        this.multiplicativeExpr();
	        this.state = 180;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===27 || _la===28) {
	            this.state = 176;
	            _la = this._input.LA(1);
	            if(!(_la===27 || _la===28)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 177;
	            this.multiplicativeExpr();
	            this.state = 182;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	multiplicativeExpr() {
	    let localctx = new MultiplicativeExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, MAPLParser.RULE_multiplicativeExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 183;
	        this.unaryExpr();
	        this.state = 188;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 3758096384) !== 0)) {
	            this.state = 184;
	            _la = this._input.LA(1);
	            if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 3758096384) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 185;
	            this.unaryExpr();
	            this.state = 190;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	unaryExpr() {
	    let localctx = new UnaryExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, MAPLParser.RULE_unaryExpr);
	    var _la = 0;
	    try {
	        this.state = 194;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 28:
	        case 32:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 191;
	            _la = this._input.LA(1);
	            if(!(_la===28 || _la===32)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 192;
	            this.unaryExpr();
	            break;
	        case 9:
	        case 33:
	        case 34:
	        case 35:
	        case 36:
	        case 37:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 193;
	            this.primaryExpr();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	primaryExpr() {
	    let localctx = new PrimaryExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, MAPLParser.RULE_primaryExpr);
	    try {
	        this.state = 206;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,14,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 196;
	            this.match(MAPLParser.NUMBER);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 197;
	            this.match(MAPLParser.STRING);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 198;
	            this.match(MAPLParser.T__32);
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 199;
	            this.match(MAPLParser.T__33);
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 200;
	            this.functionCall();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 201;
	            this.fieldPath();
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 202;
	            this.match(MAPLParser.T__8);
	            this.state = 203;
	            this.expr();
	            this.state = 204;
	            this.match(MAPLParser.T__9);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

MAPLParser.EOF = antlr4.Token.EOF;
MAPLParser.T__0 = 1;
MAPLParser.T__1 = 2;
MAPLParser.T__2 = 3;
MAPLParser.T__3 = 4;
MAPLParser.T__4 = 5;
MAPLParser.T__5 = 6;
MAPLParser.T__6 = 7;
MAPLParser.T__7 = 8;
MAPLParser.T__8 = 9;
MAPLParser.T__9 = 10;
MAPLParser.T__10 = 11;
MAPLParser.T__11 = 12;
MAPLParser.T__12 = 13;
MAPLParser.T__13 = 14;
MAPLParser.T__14 = 15;
MAPLParser.T__15 = 16;
MAPLParser.T__16 = 17;
MAPLParser.T__17 = 18;
MAPLParser.T__18 = 19;
MAPLParser.T__19 = 20;
MAPLParser.T__20 = 21;
MAPLParser.T__21 = 22;
MAPLParser.T__22 = 23;
MAPLParser.T__23 = 24;
MAPLParser.T__24 = 25;
MAPLParser.T__25 = 26;
MAPLParser.T__26 = 27;
MAPLParser.T__27 = 28;
MAPLParser.T__28 = 29;
MAPLParser.T__29 = 30;
MAPLParser.T__30 = 31;
MAPLParser.T__31 = 32;
MAPLParser.T__32 = 33;
MAPLParser.T__33 = 34;
MAPLParser.IDENT = 35;
MAPLParser.NUMBER = 36;
MAPLParser.STRING = 37;
MAPLParser.LINE_COMMENT = 38;
MAPLParser.BLOCK_COMMENT = 39;
MAPLParser.WS = 40;

MAPLParser.RULE_mapUnit = 0;
MAPLParser.RULE_mapDecl = 1;
MAPLParser.RULE_mapBody = 2;
MAPLParser.RULE_mapStmt = 3;
MAPLParser.RULE_fieldPath = 4;
MAPLParser.RULE_assignStmt = 5;
MAPLParser.RULE_assignDefaultStmt = 6;
MAPLParser.RULE_functionAssignStmt = 7;
MAPLParser.RULE_functionCall = 8;
MAPLParser.RULE_ifStmt = 9;
MAPLParser.RULE_forStmt = 10;
MAPLParser.RULE_validateStmt = 11;
MAPLParser.RULE_exprList = 12;
MAPLParser.RULE_expr = 13;
MAPLParser.RULE_logicalOrExpr = 14;
MAPLParser.RULE_logicalAndExpr = 15;
MAPLParser.RULE_equalityExpr = 16;
MAPLParser.RULE_relationalExpr = 17;
MAPLParser.RULE_additiveExpr = 18;
MAPLParser.RULE_multiplicativeExpr = 19;
MAPLParser.RULE_unaryExpr = 20;
MAPLParser.RULE_primaryExpr = 21;

class MapUnitContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = MAPLParser.RULE_mapUnit;
    }

	EOF() {
	    return this.getToken(MAPLParser.EOF, 0);
	};

	mapDecl = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(MapDeclContext);
	    } else {
	        return this.getTypedRuleContext(MapDeclContext,i);
	    }
	};

	accept(visitor) {
	    if ( visitor instanceof MAPLVisitor ) {
	        return visitor.visitMapUnit(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class MapDeclContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = MAPLParser.RULE_mapDecl;
    }

	IDENT = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(MAPLParser.IDENT);
	    } else {
	        return this.getToken(MAPLParser.IDENT, i);
	    }
	};


	mapBody() {
	    return this.getTypedRuleContext(MapBodyContext,0);
	};

	accept(visitor) {
	    if ( visitor instanceof MAPLVisitor ) {
	        return visitor.visitMapDecl(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class MapBodyContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = MAPLParser.RULE_mapBody;
    }

	mapStmt = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(MapStmtContext);
	    } else {
	        return this.getTypedRuleContext(MapStmtContext,i);
	    }
	};

	accept(visitor) {
	    if ( visitor instanceof MAPLVisitor ) {
	        return visitor.visitMapBody(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class MapStmtContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = MAPLParser.RULE_mapStmt;
    }

	assignStmt() {
	    return this.getTypedRuleContext(AssignStmtContext,0);
	};

	assignDefaultStmt() {
	    return this.getTypedRuleContext(AssignDefaultStmtContext,0);
	};

	functionAssignStmt() {
	    return this.getTypedRuleContext(FunctionAssignStmtContext,0);
	};

	ifStmt() {
	    return this.getTypedRuleContext(IfStmtContext,0);
	};

	forStmt() {
	    return this.getTypedRuleContext(ForStmtContext,0);
	};

	validateStmt() {
	    return this.getTypedRuleContext(ValidateStmtContext,0);
	};

	accept(visitor) {
	    if ( visitor instanceof MAPLVisitor ) {
	        return visitor.visitMapStmt(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class FieldPathContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = MAPLParser.RULE_fieldPath;
    }
